Fix wrong positioning

--- a/styles/navigation.sass
+++ b/styles/navigation.sass
@@ -51,6 +51,7 @@
 				+default_transition
 				text-decoration: none
 				color: black
+				display: block
 		li:hover
 			a
 				color: rgba(0,0,0,.5)
